org.mmisw.ont - Ontology URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-11-04
	Re. 24: unversioned and latest-version requests
		- Accept dash ('-') as a valid version in an ontology URI request.
		- The dash requst is handled with a "redirect" to the actual latest version
		- the "unversioned" request is still handled as usual: it simple returns the
		  contents of the latest version without any modification.
	
	
2008-11-03
	- _getFullPath: try with or without ".owl" extension
	
2008-11-02
	- UriResolver: now reportin PC-Remote-Addr; also googlebot check disabled as the
	  the robots.txt is now active.
	
	- Db: log.warn instead of throwing the exception in the _con.close() call (sometimes
	  an "already closed" exception is thrown --perhaps some pooling/cache thing-- but 
	  showing the error to the end-user is not necessary)
	
	
2008-11-01
	- New Db.getOntologyVersions(MmiUri mmiUri) to get the versions of a given
	  ontology. The given mmiUri is used to create the query wildcard, ie, the 
	  version part (mmiUri.getVersion()) is ignored.
	  
	- Issue 23: Resolve latest version
	  See UriResolver._resolveUri:
	  	If version is not explicitly requested, find the latest version of the
	  	corresponding ontology (using "%" for version wildcard and the other components
	  	in the URI), and continue regular processing with the URI found.
	  	Note: topic extension is handled with a trailing ".%" to the base topic without
	  	extension. Note: the dot is important to avoid getting topics that have the topic 
	  	in question as suffix.
	  	
	  
	- Convenience parameter "_versions" to report the versions of a requested mmiUri, ex:
	    http://mmisw.org/ont/mmi/parameter/?_versions
	
	
2008-10-30
	 - Issue 14: "mysql db connection timeout error"
	   http://code.google.com/p/mmisw/issues/detail?id=14
	   
	   Db.java: move DataSource lookup to the init() method.